--- a/blog2.html
+++ b/blog2.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- <div class="py-1 top">
+<div class="py-1 top">
     <div class="container">
       <div class="row">
         <div class="col-sm text-center text-md-left mb-md-0 mb-2 pr-md-4 d-flex topper align-items-center">
@@ -90,92 +90,61 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/log.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/blog2.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-start">
       <div class="col-md-9 ftco-animate pb-5">
-       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Our Blog <i class="fa fa-chevron-right"></i></span></p>
-       <h1 class="mb-3 bread">Our Blog</h1>
+       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog Single <i class="fa fa-chevron-right"></i></span></p>
+       <h1 class="mb-3 bread">The latest technology development in the water industry</h1>
      </div>
    </div>
  </div>
 </section>
 
-<section class="ftco-section bg-light">
+<section class="ftco-section">
   <div class="container">
-    <div class="row d-flex">
-      <div class="col-lg-4 ftco-animate">
-        <div class="blog-entry">
-          <a href="blog1.html" class="block-20" style="background-image: url('images/blog1.png');">
-          </a>
-          <div class="text d-block">
-           <div class="meta">
-            <p>
-             <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-             <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-           </p>
-         </div>
-         <h3 class="heading"><a href="#">Save groundwater  &amp; start drinking wastewater</a></h3>
-         <p><a href="blog1.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-       </div>
-     </div>
-   </div>
+    <div class="row">
+      <div class="col-lg-8 ftco-animate">
+        <h2 class="mb-3">From seawater to drinking water, with the push of a button</h2>
+        <p>MIT researchers have developed a portable desalination unit, weighing less than 10 kilograms, that can remove particles and salts to generate drinking water.
 
-   <div class="col-lg-4 ftco-animate">
-    <div class="blog-entry">
-      <a href="blog2.html" class="block-20" style="background-image: url('images/blog2.jpg');">
-      </a>
-      <div class="text d-block">
-       <div class="meta">
+The suitcase-sized device, which requires less power to operate than a cell phone charger, can also be driven by a small, portable solar panel, which can be purchased online for around $50. It automatically generates drinking water that exceeds World Health Organization quality standards. The technology is packaged into a user-friendly device that runs with the push of one button.</p>
         <p>
-         <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-         <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-         
-       </p>
-     </div>
-     <h3 class="heading"><a href="#">The latest technology developments in the water industry</a></h3>
-     <p><a href="blog2.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-   </div>
- </div>
-</div>
-<div class="col-lg-4 ftco-animate">
-  <div class="blog-entry">
-    <a href="blog3.html" class="block-20" style="background-image: url('images/blog3.jpg');">
-    </a>
-    <div class="text d-block">
-     <div class="meta">
-      <p>
-       <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-       <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-     </p>
-   </div>
-   <h3 class="heading"><a href="#">Fostering diversity &amp; inclusive participation in the water and sanitation workforce</a></h3>
-   <p><a href="blog3.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
- </div>
-</div>
-</div>
+          <img src="images/p2.jpg" alt="" class="img-fluid">
+        </p>
+        <p>Unlike other portable desalination units that require water to pass through filters, this device utilizes electrical power to remove particles from drinking water. Eliminating the need for replacement filters greatly reduces the long-term maintenance requirements.
 
-<div class="col-lg-4 ftco-animate">
-  <div class="blog-entry">
-    <a href="blog4.html" class="block-20" style="background-image: url('images/blog4.jpg');">
-    </a>
-    <div class="text d-block">
-     <div class="meta">
-      <p>
-       <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 03, 2022</a>
-       <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-     </p>
-   </div>
-   <h3 class="heading"><a href="#">Building Water Back Better</a></h3>
-   <p><a href="blog4.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
+This could enable the unit to be deployed in remote and severely resource-limited areas, such as communities on small islands or aboard seafaring cargo ships. It could also be used to aid refugees fleeing natural disasters or by soldiers carrying out long-term military operations.
+
+“This is really the culmination of a 10-year journey that I and my group have been on. We worked for years on the physics behind individual desalination processes, but pushing all those advances into a box, building a system, and demonstrating it in the ocean, that was a really meaningful and rewarding experience for me,” says senior author Jongyoon Han, a professor of electrical engineering and computer science and of biological engineering, and a member of the Research Laboratory of Electronics (RLE).
+
+Joining Han on the paper are first author Junghyo Yoon, a research scientist in RLE; Hyukjin J. Kwon, a former postdoc; SungKu Kang, a postdoc at Northeastern University; and Eric Brack of the U.S. Army Combat Capabilities Development Command (DEVCOM). The research has been published online in Environmental Science and Technology.</p>
+        <h2 class="mb-3 mt-5">Filter-free technology</h2>
+        <p>Commercially available portable desalination units typically require high-pressure pumps to push water through filters, which are very difficult to miniaturize without compromising the energy-efficiency of the device, explains Yoon.</p>
+
+<p>Instead, their unit relies on a technique called ion concentration polarization (ICP), which was pioneered by Han’s group more than 10 years ago. Rather than filtering water, the ICP process applies an electrical field to membranes placed above and below a channel of water. The membranes repel positively or negatively charged particles — including salt molecules, bacteria, and viruses — as they flow past. The charged particles are funneled into a second stream of water that is eventually discharged.</p>
+
+The process removes both dissolved and suspended solids, allowing clean water to pass through the channel. Since it only requires a low-pressure pump, ICP uses less energy than other techniques.
+
+But ICP does not always remove all the salts floating in the middle of the channel. So the researchers incorporated a second process, known as electrodialysis, to remove remaining salt ions.
+
+<p>Yoon and Kang used machine learning to find the ideal combination of ICP and electrodialysis modules. The optimal setup includes a two-stage ICP process, with water flowing through six modules in the first stage then through three in the second stage, followed by a single electrodialysis process. This minimized energy usage while ensuring the process remains self-cleaning.
+
+“While it is true that some charged particles could be captured on the ion exchange membrane, if they get trapped, we just reverse the polarity of the electric field and the charged particles can be easily removed,” Yoon explains.</p>
+
+<p>They shrunk and stacked the ICP and electrodialysis modules to improve their energy efficiency and enable them to fit inside a portable device. The researchers designed the device for nonexperts, with just one button to launch the automatic desalination and purification process. Once the salinity level and the number of particles decrease to specific thresholds, the device notifies the user that the water is drinkable.
+
+The researchers also created a smartphone app that can control the unit wirelessly and report real-time data on power consumption and water salinity.</p>
+
+<p>SOURCE: IWA</p>
+      
  </div>
-</div>
-</div>
-</div>
-</div>
+
+  </div>
 </div>
 </section>
+
 
 <footer class="ftco-footer">
     <div class="container mb-5 pb-4">
@@ -248,7 +217,7 @@
             </button>
           </div>
           <div class="modal-body p-4 p-md-5">
-           <form action="index.php" method="post" class="appointment-form ftco-animate">
+         <form action="index.php" method="post" class="appointment-form ftco-animate">
               <h3>Request Quote</h3>
               <div class="">
                 <div class="form-group">
@@ -285,11 +254,11 @@
                   <input type="submit" name="submit" id="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
                 </div>
               </div>
-            </form>
-          </div>
+            </form>          </div>
         </div>
       </div>
     </div>
+
 
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
