--- a/blog3.html
+++ b/blog3.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <title>Jodeb Water Technologies Ltd</title>
-  <link rel="shortcut icon" type="image/png" href="images\ico.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -23,7 +22,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- <div class="py-1 top">
+<div class="py-1 top">
     <div class="container">
       <div class="row">
         <div class="col-sm text-center text-md-left mb-md-0 mb-2 pr-md-4 d-flex topper align-items-center">
@@ -90,92 +89,45 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/log.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/blog3.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-start">
       <div class="col-md-9 ftco-animate pb-5">
-       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Our Blog <i class="fa fa-chevron-right"></i></span></p>
-       <h1 class="mb-3 bread">Our Blog</h1>
+       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog Single <i class="fa fa-chevron-right"></i></span></p>
+       <h1 class="mb-3 bread">Fostering diversity & inclusive participation in the water and sanitation workforce</h1>
      </div>
    </div>
  </div>
 </section>
 
-<section class="ftco-section bg-light">
+<section class="ftco-section">
   <div class="container">
-    <div class="row d-flex">
-      <div class="col-lg-4 ftco-animate">
-        <div class="blog-entry">
-          <a href="blog1.html" class="block-20" style="background-image: url('images/blog1.png');">
-          </a>
-          <div class="text d-block">
-           <div class="meta">
-            <p>
-             <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-             <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-           </p>
-         </div>
-         <h3 class="heading"><a href="#">Save groundwater  &amp; start drinking wastewater</a></h3>
-         <p><a href="blog1.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-       </div>
-     </div>
-   </div>
-
-   <div class="col-lg-4 ftco-animate">
-    <div class="blog-entry">
-      <a href="blog2.html" class="block-20" style="background-image: url('images/blog2.jpg');">
-      </a>
-      <div class="text d-block">
-       <div class="meta">
+    <div class="row">
+      <div class="col-lg-8 ftco-animate">
+        <h2 class="mb-3">Workplaces often reflect societal stereotypes, and the water and sanitation workforce is no exception</h2>
+        <p> Women continue to be an underrepresented group. Research also shows that women are often under-represented in relevant government agencies handling water and sanitation, and in private enterprises. In water utilities, they comprise only 18 per cent of the sector’s paid workforce. Such statistics are jarring alongside the well-known facts that women and girls play a critical role in water-related tasks, possessing intimate knowledge of water resources, and issues of water quality and quantity. Moreover, they can experience systematic exclusion from sanitation access, along with people with disabilities and other marginalised groups.</p>
         <p>
-         <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-         <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-         
-       </p>
-     </div>
-     <h3 class="heading"><a href="#">The latest technology developments in the water industry</a></h3>
-     <p><a href="blog2.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-   </div>
- </div>
-</div>
-<div class="col-lg-4 ftco-animate">
-  <div class="blog-entry">
-    <a href="blog3.html" class="block-20" style="background-image: url('images/blog3.jpg');">
-    </a>
-    <div class="text d-block">
-     <div class="meta">
-      <p>
-       <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-       <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-     </p>
-   </div>
-   <h3 class="heading"><a href="#">Fostering diversity &amp; inclusive participation in the water and sanitation workforce</a></h3>
-   <p><a href="blog3.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
- </div>
-</div>
-</div>
+          <img src="images/p3.jpg" alt="" class="img-fluid">
+        </p>
+        <p>The situation isn’t entirely grim! There are many initiatives and tools developed by utilities, government departments, civil society organisations and the private sector. These efforts are challenging the status quo and shifting norms in a positive direction. A recently developed database makes these easily accessible.</p>
 
-<div class="col-lg-4 ftco-animate">
-  <div class="blog-entry">
-    <a href="blog4.html" class="block-20" style="background-image: url('images/blog4.jpg');">
-    </a>
-    <div class="text d-block">
-     <div class="meta">
-      <p>
-       <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 03, 2022</a>
-       <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-     </p>
-   </div>
-   <h3 class="heading"><a href="#">Building Water Back Better</a></h3>
-   <p><a href="blog4.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
+<p>Examples are many. Gender-sensitive curriculum and apprenticeship programmes can support a diversity of people to choose a career in the water and sanitation sector. Use of anonymous recruitment procedures can reduce the covert biases at the hiring stage. Diversity and inclusion policies can support people who are gender transitioning, focusing both on the employee and a conducive work environment.</p>
+
+<p>Accessibility can be addressed also. Embedding the Universal Design Guidelines into workplaces, and consulting people with disabilities in WASH infrastructure planning, implementation and monitoring is an important step toward ensuring accessible workplaces.
+
+Attention to care roles is fundamental. Diverse family-friendly policies, practices and facilities in the workplace such as paid maternity and paternity leave are a starting point. Beyond this, ensuring that parental leave policies recognise sexual and gender minorities and all types of families/parenting situations is also needed. Other strategies include on-site clean, private and comfortable lactation rooms and flexible work arrangements for all caregivers. These can support redistributing care responsibilities, and contribute to promoting a gender sensitive work culture and also address wider societal norms.</p>
+
+<p>Lastly, to support advancement to leadership roles, formal or informal networks of WASH women professionals can provide a supportive space to share experiences and challenges. They provide the confidence women may need to overcome their inhibitions in pursuing career advancement opportunities, and enable them to see themselves in leadership and decision-making roles.</p>
+
+<p>SOURCE: IWA</p>
+      
  </div>
-</div>
-</div>
-</div>
-</div>
+
+  </div>
 </div>
 </section>
+
 
 <footer class="ftco-footer">
     <div class="container mb-5 pb-4">
@@ -285,11 +237,11 @@
                   <input type="submit" name="submit" id="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
                 </div>
               </div>
-            </form>
-          </div>
+            </form>          </div>
         </div>
       </div>
     </div>
+
 
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
