--- a/blog4.html
+++ b/blog4.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- <div class="py-1 top">
+<div class="py-1 top">
     <div class="container">
       <div class="row">
         <div class="col-sm text-center text-md-left mb-md-0 mb-2 pr-md-4 d-flex topper align-items-center">
@@ -90,92 +90,45 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/log.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/blog4.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-start">
       <div class="col-md-9 ftco-animate pb-5">
-       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Our Blog <i class="fa fa-chevron-right"></i></span></p>
-       <h1 class="mb-3 bread">Our Blog</h1>
+       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog Single <i class="fa fa-chevron-right"></i></span></p>
+       <h1 class="mb-3 bread">Building Water Back Better</h1>
      </div>
    </div>
  </div>
 </section>
 
-<section class="ftco-section bg-light">
+<section class="ftco-section">
   <div class="container">
-    <div class="row d-flex">
-      <div class="col-lg-4 ftco-animate">
-        <div class="blog-entry">
-          <a href="blog1.html" class="block-20" style="background-image: url('images/blog1.png');">
-          </a>
-          <div class="text d-block">
-           <div class="meta">
-            <p>
-             <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-             <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-           </p>
-         </div>
-         <h3 class="heading"><a href="#">Save groundwater  &amp; start drinking wastewater</a></h3>
-         <p><a href="blog1.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-       </div>
-     </div>
-   </div>
+    <div class="row">
+      <div class="col-lg-8 ftco-animate">
+        <h2 class="mb-3">In recent months, there have been numerous news reports and discussions around the so-called ‘build back better’ agenda</h2>
+        <p>It is a phrase which has become popularised due to its usage by key actors, such as the UN and the World Bank.
 
-   <div class="col-lg-4 ftco-animate">
-    <div class="blog-entry">
-      <a href="blog2.html" class="block-20" style="background-image: url('images/blog2.jpg');">
-      </a>
-      <div class="text d-block">
-       <div class="meta">
+This slogan broadly means – how can we build back our economies and societies post-coronavirus in a way which protects the natural environment and is sustainable?
+
+Clearly water has an important role to play in this agenda. There are huge opportunities in all contexts around the world. High-income countries typically have a very linear water system, meaning there is scope to improve efficiencies to respond to the needs and challenges of the 21st century. Meanwhile, the lack of access and service provision in low-income countries means new and relevant technology and institutional approaches can be built in.</p>
         <p>
-         <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-         <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-         
-       </p>
-     </div>
-     <h3 class="heading"><a href="#">The latest technology developments in the water industry</a></h3>
-     <p><a href="blog2.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-   </div>
- </div>
-</div>
-<div class="col-lg-4 ftco-animate">
-  <div class="blog-entry">
-    <a href="blog3.html" class="block-20" style="background-image: url('images/blog3.jpg');">
-    </a>
-    <div class="text d-block">
-     <div class="meta">
-      <p>
-       <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-       <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-     </p>
-   </div>
-   <h3 class="heading"><a href="#">Fostering diversity &amp; inclusive participation in the water and sanitation workforce</a></h3>
-   <p><a href="blog3.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
- </div>
-</div>
-</div>
+          <img src="images/image_3.jpg" alt="" class="img-fluid">
+        </p>
+        <p>But there is far more to do if we are to ‘build water back better’. As part of this, IWA is committed to collaborating with partners on key topics that will fundamentally shape the future, such as citywide inclusive sanitation and the digitalisation of the water sector. If we can harness technology, innovation, and collaboration in these areas, the benefits will be felt across an array of social, environmental, economic and health outcomes.</p>
 
-<div class="col-lg-4 ftco-animate">
-  <div class="blog-entry">
-    <a href="blog4.html" class="block-20" style="background-image: url('images/blog4.jpg');">
-    </a>
-    <div class="text d-block">
-     <div class="meta">
-      <p>
-       <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 03, 2022</a>
-       <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-     </p>
-   </div>
-   <h3 class="heading"><a href="#">Building Water Back Better</a></h3>
-   <p><a href="blog4.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
+<p>We are approaching the UN World Water Day. IWA has always supported this landmark day in the water calendar, and I am pleased to say that IWA has formally raised its level of support. This is an important platform for raising awareness among the public of the challenges people face in accessing clean water and sanitation services. What is needed is greater action to implement solutions – the right solutions for our time – and I believe building water back better has a key role to play in this.</p>
+
+<p>I’d like to hear from any innovative water professional in our sector who has a story to tell about your work in helping us build back better</p>
+
+<p>SOURCE: IWA</p>
+      
  </div>
-</div>
-</div>
-</div>
-</div>
+
+  </div>
 </div>
 </section>
+
 
 <footer class="ftco-footer">
     <div class="container mb-5 pb-4">
@@ -285,11 +238,11 @@
                   <input type="submit" name="submit" id="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
                 </div>
               </div>
-            </form>
-          </div>
+            </form>          </div>
         </div>
       </div>
     </div>
+
 
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
