--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Jodeb Water Technologies LTD</title>
+	<title>Jodeb | water Treatment plants</title>
+<link rel="shortcut icon" type="image/png" href="images\ico.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Incorporated in Nigeria on the 6th August, 2001 as an innovative company with a broad spectrum experience in various aspects of water engineering services. we are involved in integrated water supply services throghout the country, where we have technocrats with more than ten years progressively, responsible and have professional experience in various area of water supply and groundwater development in Nigeria.">
+<meta name="keywords" content="water engineeering in Nigeria, Borehole drillers in lagos, Best drillers in Nigeria, Jodeb, jodeb water technologies Ltd, water treatment plant in lagos">
+  
 	
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
@@ -99,8 +103,7 @@
 							customer’s expectations with regard to specifications
 							compliance, safety, and quality of workmanship. We
 							are a leading engineering and contracting company
-							in the field of water and wastewater treatment
-							systems.</p>
+							in the field of water, wastewater treatment and water engineering services.</p>
 						<p><a href="#" class="btn btn-primary">Our Services</a> <a href="#" class="btn btn-white" data-toggle="modal" data-target="#exampleModalCenter">Request A Quote</a></p>
 					</div>
 				</div>
@@ -459,53 +462,52 @@
 			<div class="row d-flex">
 				<div class="col-lg-4 ftco-animate">
 					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+						<a href="blog-single.html" class="block-20" style="background-image: url('images/blog1.png');">
 						</a>
 						<div class="text d-block">
 							<div class="meta">
 								<p>
-									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>
+									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
 									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>
+									
 								</p>
 							</div>
-							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>
-							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
+							<h3 class="heading"><a href="#">Save groundwater  &amp; start drinking wastewater</a></h3>
+							<p><a href="blog1.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-4 ftco-animate">
 					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+						<a href="blog-single.html" class="block-20" style="background-image: url('images/blog2.jpg');">
 						</a>
 						<div class="text d-block">
 							<div class="meta">
 								<p>
-									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>
+									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
 									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>
 								</p>
 							</div>
-							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>
-							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
+							<h3 class="heading"><a href="#">The latest technology developments in the water industry</a></h3>
+							<p><a href="blog2.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 ftco-animate">
 					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+						<a href="blog-single.html" class="block-20" style="background-image: url('images/blog3.jpg');">
+
 						</a>
 						<div class="text d-block">
 							<div class="meta">
 								<p>
-									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>
+									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
 									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>
 								</p>
 							</div>
-							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>
-							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
+							<h3 class="heading"><a href="#">Fostering diversity &amp; inclusive participation in the water and sanitation workforce</a></h3>
+							<p><a href="blog3.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
 						</div>
 					</div>
 				</div>
@@ -532,10 +534,10 @@
 						<h2 class="ftco-heading-2">Links</h2>
 						<div class="d-flex">
 							<ul class="list-unstyled mr-md-4">
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
+								<li><a href="project.html"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
+								<li><a href="about.html"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+								<li><a href="services.html"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
+								<li><a href="blog.html"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
 								
 							</ul>
 							<ul class="list-unstyled ml-md-5">
@@ -584,17 +586,17 @@
 						</button>
 					</div>
 					<div class="modal-body p-4 p-md-5">
-						<form action="#" class="appointment-form ftco-animate">
+						<form action="index.php" method="post" class="appointment-form ftco-animate">
 							<h3>Request Quote</h3>
 							<div class="">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="First Name">
+									<input name="fname" type="text" class="form-control" placeholder="First Name">
 								</div>
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Last Name">
+									<input name="lname" type="text" class="form-control" placeholder="Last Name">
 								</div>
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Phone">
+									<input name="phone" type="text" class="form-control" placeholder="Phone">
 								</div>
 							</div>
 							<div class="">
@@ -615,10 +617,10 @@
 							</div>
 							<div class="">
 								<div class="form-group">
-									<textarea name="" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
+									<textarea name="message" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
 								</div>
 								<div class="form-group">
-									<input type="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
+									<input type="submit" name="submit" id="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
 								</div>
 							</div>
 						</form>
