--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Jodeb Water Technologies Ltd</title>
+	<link rel="shortcut icon" type="image/png" href="images\ico.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -283,10 +284,10 @@
 							<h2 class="ftco-heading-2">Links</h2>
 							<div class="d-flex">
 								<ul class="list-unstyled mr-md-4">
-									<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
-									<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-									<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
-									<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
+									<li><a href="project.html"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
+								<li><a href="about.html"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+								<li><a href="services.html"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
+								<li><a href="blog.html"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
 									
 								</ul>
 								<ul class="list-unstyled ml-md-5">
@@ -337,44 +338,44 @@
 							</button>
 						</div>
 						<div class="modal-body p-4 p-md-5">
-							<form action="#" class="appointment-form ftco-animate">
-								<h3>Request Quote</h3>
-								<div class="">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="First Name">
-									</div>
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Last Name">
-									</div>
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Phone">
-									</div>
+						<form action="index.php" method="post" class="appointment-form ftco-animate">
+							<h3>Request Quote</h3>
+							<div class="">
+								<div class="form-group">
+									<input name="fname" type="text" class="form-control" placeholder="First Name">
 								</div>
-								<div class="">
-									<div class="form-group">
-										<div class="form-field">
-											<div class="select-wrap">
-												<div class="icon"><span class="fa fa-chevron-down"></span></div>
-												<select name="" id="" class="form-control">
-													<option value="">Select Your Services</option>
-													<option value="">Borehole construction</option>
-													<option value="">Water treatment plant</option>
-													<option value="">project consultancy and management</option>
-													<option value="">Other Services</option>
-												</select>
-											</div>
+								<div class="form-group">
+									<input name="lname" type="text" class="form-control" placeholder="Last Name">
+								</div>
+								<div class="form-group">
+									<input name="phone" type="text" class="form-control" placeholder="Phone">
+								</div>
+							</div>
+							<div class="">
+								<div class="form-group">
+									<div class="form-field">
+										<div class="select-wrap">
+											<div class="icon"><span class="fa fa-chevron-down"></span></div>
+											<select name="" id="" class="form-control">
+												<option value="">Select Your Services</option>
+												<option value="">Borehole construction</option>
+												<option value="">Water treatment plant</option>
+												<option value="">project consultancy and management</option>
+												<option value="">Other Services</option>
+											</select>
 										</div>
 									</div>
 								</div>
-								<div class="">
-									<div class="form-group">
-										<textarea name="" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
-									</div>
-									<div class="form-group">
-										<input type="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
-									</div>
+							</div>
+							<div class="">
+								<div class="form-group">
+									<textarea name="message" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
 								</div>
-							</form>
+								<div class="form-group">
+									<input type="submit" name="submit" id="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
+								</div>
+							</div>
+						</form>
 						</div>
 					</div>
 				</div>
