--- a/blog1.html
+++ b/blog1.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- <div class="py-1 top">
+<div class="py-1 top">
     <div class="container">
       <div class="row">
         <div class="col-sm text-center text-md-left mb-md-0 mb-2 pr-md-4 d-flex topper align-items-center">
@@ -90,92 +90,45 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/log.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/blog1.png');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-start">
       <div class="col-md-9 ftco-animate pb-5">
-       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Our Blog <i class="fa fa-chevron-right"></i></span></p>
-       <h1 class="mb-3 bread">Our Blog</h1>
+       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog Single <i class="fa fa-chevron-right"></i></span></p>
+       <h1 class="mb-3 bread">Save groundwater  &amp; start drinking wastewater</h1>
      </div>
    </div>
  </div>
 </section>
 
-<section class="ftco-section bg-light">
+<section class="ftco-section">
   <div class="container">
-    <div class="row d-flex">
-      <div class="col-lg-4 ftco-animate">
-        <div class="blog-entry">
-          <a href="blog1.html" class="block-20" style="background-image: url('images/blog1.png');">
-          </a>
-          <div class="text d-block">
-           <div class="meta">
-            <p>
-             <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-             <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-           </p>
-         </div>
-         <h3 class="heading"><a href="#">Save groundwater  &amp; start drinking wastewater</a></h3>
-         <p><a href="blog1.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-       </div>
-     </div>
-   </div>
+    <div class="row">
+      <div class="col-lg-8 ftco-animate">
+        <h2 class="mb-3">You can turn wastewater straight to drinking water instead of taking a detour through nature</h2>
+        <p>That seems like a bold statement for the average person, but in reality, it is something a lot of professionals are looking into already.
 
-   <div class="col-lg-4 ftco-animate">
-    <div class="blog-entry">
-      <a href="blog2.html" class="block-20" style="background-image: url('images/blog2.jpg');">
-      </a>
-      <div class="text d-block">
-       <div class="meta">
+Whenever we are drinking water, we almost instantly think about groundwater. But if I told you astronauts are drinking their own purified urine and sweat, you may raise an eyebrow. This is something we should see happening on earth sooner rather than later. When we talk about our accomplishments in space and how it is a forefront for technology, there is no reason why we cannot use the exact same principles here on earth. For the greater good.</p>
         <p>
-         <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-         <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-         
-       </p>
-     </div>
-     <h3 class="heading"><a href="#">The latest technology developments in the water industry</a></h3>
-     <p><a href="blog2.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-   </div>
- </div>
-</div>
-<div class="col-lg-4 ftco-animate">
-  <div class="blog-entry">
-    <a href="blog3.html" class="block-20" style="background-image: url('images/blog3.jpg');">
-    </a>
-    <div class="text d-block">
-     <div class="meta">
-      <p>
-       <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 01, 2022</a>
-       <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-     </p>
-   </div>
-   <h3 class="heading"><a href="#">Fostering diversity &amp; inclusive participation in the water and sanitation workforce</a></h3>
-   <p><a href="blog3.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
- </div>
-</div>
-</div>
+          <img src="images/image_3.jpg" alt="" class="img-fluid">
+        </p>
+        <p>Astronauts have a saying “yesterday’s coffee is today’s coffee” – and we should be thinking about water the same way. At Aquaporin, we have a mature technology that is allowing us to reuse wastewater and drink it straight away after being filtered by our membranes</p>
+        <h2 class="mb-3 mt-5">Tapping into the water reuse technology</h2>
+        <p>In Denmark, we have no second thoughts about using groundwater. In Mexico City, the groundwater is depleting to a level that the city is sinking a little every year. Here in Denmark, we are not allowed to filter groundwater, even though we discovered contaminants like PFAS and pesticides. Instead, we are still drinking the water after lowering the levels of contaminants by mixing water from different groundwater areas. This process has raised a question in my head that I cannot let go of – why not use our wastewater which we are already treating and have total control over instead of the polluted groundwater?
 
-<div class="col-lg-4 ftco-animate">
-  <div class="blog-entry">
-    <a href="blog4.html" class="block-20" style="background-image: url('images/blog4.jpg');">
-    </a>
-    <div class="text d-block">
-     <div class="meta">
-      <p>
-       <a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 03, 2022</a>
-       <a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-     </p>
-   </div>
-   <h3 class="heading"><a href="#">Building Water Back Better</a></h3>
-   <p><a href="blog4.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
+What we see here in Denmark is that we are shutting down groundwater wells because of high levels of contamination. In contrast, by recycling water we could assure good quality drinking water.
+
+As with everything in life there is always the question of price. I am aware it is not cheap to save and preserve the resources we have available in the world, but it is part of our green transition and the added sustainability we wish to achieve. It is an investment in the future we must accept both as companies but also as humans</p>
+
+<p>SOURCE: IWA</p>
+      
  </div>
-</div>
-</div>
-</div>
-</div>
+
+  </div>
 </div>
 </section>
+
 
 <footer class="ftco-footer">
     <div class="container mb-5 pb-4">
@@ -248,7 +201,7 @@
             </button>
           </div>
           <div class="modal-body p-4 p-md-5">
-           <form action="index.php" method="post" class="appointment-form ftco-animate">
+        <form action="index.php" method="post" class="appointment-form ftco-animate">
               <h3>Request Quote</h3>
               <div class="">
                 <div class="form-group">
@@ -290,6 +243,7 @@
         </div>
       </div>
     </div>
+
 
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
