--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Jodeb water technologies LTD</title>
+	<link rel="shortcut icon" type="image/png" href="images\ico.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -110,31 +111,31 @@
 
 			<div class="row block-9">
 				<div class="col-md-8">
-					<form action="#" class="p-4 p-md-5 contact-form">
+					<form action="index.php" method="post" class="p-4 p-md-5 contact-form">
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Name">
+									<input name="name" type="text" class="form-control" placeholder="Your Name">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Email">
+									<input name="email" type="text" class="form-control" placeholder="Your Email">
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Subject">
+									<input name="subject" type="text" class="form-control" placeholder="Subject">
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+									<textarea name="message" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+									<input name="submit" type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
 								</div>
 							</div>
 						</div>
@@ -247,17 +248,17 @@
 						</button>
 					</div>
 					<div class="modal-body p-4 p-md-5">
-						<form action="#" class="appointment-form ftco-animate">
+					<form action="index.php" method="post" class="appointment-form ftco-animate">
 							<h3>Request Quote</h3>
 							<div class="">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="First Name">
+									<input name="fname" type="text" class="form-control" placeholder="First Name">
 								</div>
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Last Name">
+									<input name="lname" type="text" class="form-control" placeholder="Last Name">
 								</div>
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Phone">
+									<input name="phone" type="text" class="form-control" placeholder="Phone">
 								</div>
 							</div>
 							<div class="">
@@ -278,10 +279,10 @@
 							</div>
 							<div class="">
 								<div class="form-group">
-									<textarea name="" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
+									<textarea name="message" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
 								</div>
 								<div class="form-group">
-									<input type="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
+									<input type="submit" name="submit" id="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
 								</div>
 							</div>
 						</form>
