--- a/s1.html
+++ b/s1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Jodeb water Technologies Ltd</title>
+	<link rel="shortcut icon" type="image/png" href="images\ico.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -224,44 +225,44 @@ Why work with us?
 							</button>
 						</div>
 						<div class="modal-body p-4 p-md-5">
-							<form action="#" class="appointment-form ftco-animate">
-								<h3>Request Quote</h3>
-								<div class="">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="First Name">
-									</div>
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Last Name">
-									</div>
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Phone">
-									</div>
+							<form action="index.php" method="post" class="appointment-form ftco-animate">
+							<h3>Request Quote</h3>
+							<div class="">
+								<div class="form-group">
+									<input name="fname" type="text" class="form-control" placeholder="First Name">
 								</div>
-								<div class="">
-									<div class="form-group">
-										<div class="form-field">
-											<div class="select-wrap">
-												<div class="icon"><span class="fa fa-chevron-down"></span></div>
-												<select name="" id="" class="form-control">
-													<option value="">Select Your Services</option>
-													<option value="">Borehole construction</option>
-													<option value="">Water treatment plant</option>
-													<option value="">project consultancy and management</option>
-													<option value="">Other Services</option>
-												</select>
-											</div>
+								<div class="form-group">
+									<input name="lname" type="text" class="form-control" placeholder="Last Name">
+								</div>
+								<div class="form-group">
+									<input name="phone" type="text" class="form-control" placeholder="Phone">
+								</div>
+							</div>
+							<div class="">
+								<div class="form-group">
+									<div class="form-field">
+										<div class="select-wrap">
+											<div class="icon"><span class="fa fa-chevron-down"></span></div>
+											<select name="" id="" class="form-control">
+												<option value="">Select Your Services</option>
+												<option value="">Borehole construction</option>
+												<option value="">Water treatment plant</option>
+												<option value="">project consultancy and management</option>
+												<option value="">Other Services</option>
+											</select>
 										</div>
 									</div>
 								</div>
-								<div class="">
-									<div class="form-group">
-										<textarea name="" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
-									</div>
-									<div class="form-group">
-										<input type="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
-									</div>
+							</div>
+							<div class="">
+								<div class="form-group">
+									<textarea name="message" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
 								</div>
-							</form>
+								<div class="form-group">
+									<input type="submit" name="submit" id="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
+								</div>
+							</div>
+						</form>
 						</div>
 					</div>
 				</div>
