--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Incorporated in Nigeria on the 6th August, 2001 as an innovative company with a broad spectrum experience in various aspects of water engineering services. we are involved in integrated water supply services throghout the country, where we have technocrats with more than ten years progressively, responsible and have professional experience in various area of water supply and groundwater development in Nigeria.">
 <meta name="keywords" content="water engineeering in Nigeria, Borehole drillers in lagos, Best drillers in Nigeria, Jodeb, jodeb water technologies Ltd, water treatment plant in lagos">
   
-	
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -577,6 +577,14 @@
 			</div>
 		</footer>
 		
+      <a
+        href="https://wa.me/2348023441296"
+        class="whatsapp_float"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <i class="fa fa-whatsapp whatsapp-icon"></i>
+      </a>
 		<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered" role="document">
 				<div class="modal-content">
