--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="water engineeering in Nigeria, Borehole drillers in lagos, Best drillers in Nigeria, Jodeb, jodeb water technologies Ltd, water treatment plant in lagos">
   
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="css/animate.css">
@@ -233,6 +233,15 @@
       </div>
     </div>
   </footer>
+
+  <a
+        href="https://wa.me/2348023441296"
+        class="whatsapp_float"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <i class="fa fa-whatsapp whatsapp-icon"></i>
+      </a>
 
   <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
