--- a/contact.html
+++ b/contact.html
@@ -196,10 +196,10 @@
 						<h2 class="ftco-heading-2">Links</h2>
 						<div class="d-flex">
 							<ul class="list-unstyled mr-md-4">
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
+								<li><a href="project.html"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
+								<li><a href="about.html"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+								<li><a href="services.html"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
+								<li><a href="blog.html"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
 								
 							</ul>
 							<ul class="list-unstyled ml-md-5">
