--- a/s5.html
+++ b/s5.html
@@ -111,7 +111,7 @@
 					<div class="row justify-content-center mb-4 pt-md-4">
 						<div class="col-md-12 heading-section ftco-animate">
 							<span class="subheading">Welcome to Jodeb</span>
-							<h2 class="mb-4">About our water treatment services</h2>
+							<h2 class="mb-4">About our project management services</h2>
 							
 							<p>		Jodeb water technologies Ltd offers a wide range of technical and consultancy solutions for wastewater, water treatment applications and other water engineering solution. <br>Our global network of technical experts helps clients achieve water and wastewater related efficiency, compliance and sustainable business success in highly regulated industries.<br> To determine optimal solutions for water treatment applications and other water engineering servicesss, Jodeb offers analysis of each specific situation.<br> If data is missing or cannot be calculated, we measure key parameters or guide analytical work as necessary.<br>
 
